<resources>
    <string name="app_name">Freelo</string>
    <string name="company_name">sadboyz</string>
    <string name="title_activity_main">ActividadPrincipal</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_rewards">Rewards</string>
    <string name="title_activity_notifications">Freelos</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_new_work">New Freelo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_your_tab_freelos_fragment">Tus Freelos</string>
    <string name="title_foll_tab_freelos_fragment">Seguidos</string>
    <string name="title_pub_tab_freelos_fragment">Publicados</string>

    <string name="sample_name">Sample Name</string>
    <string name="sample_description">Sample Description</string>
    <string name="sample_priece">Sample Priece</string>
    <string name="sample_quantity">Sample Quantity</string>
    <string name="button_text">Info</string>
    <string name="insufficient_credit">Crédito insuficiente</string>
    <string name="button_add">Generar Cupón</string>

    <string name="sample_name_work">Sample Work</string>
    <string name="sample_description_work">Sample Description Work</string>
    <string name="sample_pubPrice_work">Sample Price</string>
    <string name="sample_date_work">Sample Date</string>
    <string name="sample_createdBy_work">Sample Creator</string>
    <string name="sample_categoryId_work">Sample Category</string>
    <string name="sample_status_work">Sample Status</string>
    <string name="button_apply_work">Aplicar</string>

    <string name="work_category">Categoría:</string>
    <string name="work_description">Descripción:</string>
    <string name="work_price">¿Cuánto ganarás?</string>
    <string name="work_date">Freelo publicado el:</string>
    <string name="work_createdBy">Freelo creado por:</string>
    <string name="work_already">Ya aplicaste a este Freelo. Búscalo en Seguidos.</string>

    <string name="title_name_new_work_fragment">Nombra tu Freelo</string>
    <string name="title_description_new_work_fragment">Describe tu Freelo</string>
    <string name="title_base_priece_new_work_fragment">¿Cuánto Invertiras?</string>
    <string name="title_new_freelo_new_work_fragment">Nuevo Freelo</string>
    <string name="button_create">CREAR</string>
    <string name="text_error_new_work">Por favor, llena todos los campos</string>
    <string name="text_success_new_work">Freelo Creado</string>
    <string name="text_no_credit_new_work">No tienes crédito suficiente para crear este Freelo</string>

    <string name="following_alert">¡No hay Freelos!</string>
    <string name="following_alert_description">Busca nuevos Freelos a los que postular en Buscar Freelos</string>

    <string name="your_freelos_alert">¡No hay Freelos!</string>
    <string name="your_freelos_alert_description">No tienes Freelos en los que trabajar. ¡Salgamos a correr unos minutos!</string>

    <string name="published_alert">¡No hay Freelos!</string>
    <string name="published_alert_description">No tienes Freelos publicados. ¡Utilizando Freelo puedes encontrar ayuda para ese proyecto en el que estás pensando!</string>

    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="logout">Logout</string>

    <string name="firebase_error_login">Error con Firebase al momento de loguear</string>

    <string name="Mi_perfil">Mi perfil</string>

    <string name="facebook_app_id">1528762440479387</string>
    <string name="fb_login_protocol_scheme">fb1528762440479387</string>

    <string name="title_information_card">Información</string>
    <string name="credit">Crédito:</string>

    <string name="title_custom_card">Temas</string>
    <string name="theme">Tema:</string>


    <string name="spinner_category_title">Selecciona una Categoría</string>
</resources>
