<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_activity_search" />
    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/ic_reward_on_black_24dp"
        android:title="@string/title_activity_rewards" />
    <item
        android:id="@+id/navigation_new_work"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/title_activity_new_work" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_activity_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_activity_profile" />

</menu>
