<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        >
        <TextView
            android:id="@+id/nameWorkTextView"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_name_work"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/title_cards_size"
            android:layout_margin="@dimen/default_margin"

            />

        <TextView
            android:id="@+id/descriptionWorkTextView"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_description_work"
            app:layout_constraintTop_toBottomOf="@+id/nameWorkTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="inherit"
            android:layout_margin="@dimen/default_margin"

            />

        <TextView
            android:id="@+id/pubPriceWorkTextView"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_pubPrice_work"
            app:layout_constraintTop_toBottomOf="@+id/descriptionWorkTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/default_margin"

           />

        <TextView
            android:id="@+id/dateWorkTextView"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_date_work"
            app:layout_constraintTop_toBottomOf="@id/pubPriceWorkTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/default_margin"

            />

        <TextView
            android:id="@+id/createdByWorkTextView"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_createdBy_work"
            app:layout_constraintTop_toBottomOf="@+id/dateWorkTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/default_margin"

            />
        <TextView
            android:id="@+id/idCategoryWorkTextView"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_categoryId_work"
            app:layout_constraintTop_toBottomOf="@+id/createdByWorkTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/default_margin"

            />
        <TextView
            android:id="@+id/statusWorkTextView"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_status_work"
            app:layout_constraintTop_toBottomOf="@+id/idCategoryWorkTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/default_margin"
            />
        <Button
            android:id="@+id/aplicarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_apply_work"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statusWorkTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorTextWhite"
            android:backgroundTint="@color/colorPrimary"
            android:layout_margin="@dimen/default_margin"

            />

    </android.support.constraint.ConstraintLayout>


    </ScrollView>
</LinearLayout>