<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_margin="@dimen/text_margin"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <TextView
        android:layout_margin="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tittleTextView"
        android:text="@string/title_new_freelo_new_work_fragment"
        android:textSize="@dimen/title_cards_size"
        app:layout_constraintStart_toStartOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tittleTextView">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameInputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_name_new_work_fragment"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/descriptionInputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_description_new_work_fragment"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/pubPrieceInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/pubPrieceInputTextView"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_base_priece_new_work_fragment"/>

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pubPrieceInputLayout"
        tools:layout_editor_absoluteX="8dp"
        android:layout_margin="@dimen/text_margin"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categorySpinner"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorTextWhite"
        android:backgroundTint="@color/colorPrimary"
        android:layout_margin="@dimen/default_margin_base" />

   <!-- <android.support.design.widget.TextInputEditText
        android:id="@+id/nameInputTextView"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittleTextView"
        android:hint="@string/title_name_new_work_fragment"
        tools:layout_editor_absoluteX="8dp" />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/descriptionInputTextView"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputTextView"
        android:hint="@string/title_description_new_work_fragment"
        tools:layout_editor_absoluteX="8dp" />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/pubPrieceInputTextView"
        android:padding="@dimen/text_margin"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/title_base_priece_new_work_fragment"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInputTextView"
        tools:layout_editor_absoluteX="8dp" />
    <Spinner
        android:id="@+id/categorySpinner"
        android:padding="@dimen/text_margin"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pubPrieceInputTextView"
        tools:layout_editor_absoluteX="8dp" />
    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorySpinner"
        android:text="@string/button_create"
        tools:layout_editor_absoluteX="148dp" />-->

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
