<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context="me.sadboyz.freelo.activities.RewardsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="460dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/mainlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <pl.droidsonroids.gif.GifImageButton
                    android:id="@+id/rewardsPictureView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/loadinggif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />



            </FrameLayout>

            <TextView
                android:id="@+id/rewardsNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/sample_name"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="@dimen/title_cards_content_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainlayout"
                />


            <LinearLayout
                android:id="@+id/LL_Seperator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/silver"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/rewardsNameTextView">
            </LinearLayout>

            <TextView
                android:id="@+id/rewardsDescriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/sample_description"
                android:gravity="left"
                android:textAlignment="gravity"
                android:textSize="@dimen/text_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rewardsNameTextView" />



            <LinearLayout
                android:id="@+id/Seperator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/silver"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/rewardsDescriptionTextView">
            </LinearLayout>
        <!--<android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/mainlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <pl.droidsonroids.gif.GifImageButton
                    android:id="@+id/rewardsPictureView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/loadinggif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


               <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"

                    <TextView
                        android:id="@+id/rewardsNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_margin_base"
                        android:text="@string/sample_name"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/colorTextWhite"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/title_cards_content_size" />


                    <TextView
                         android:id="@+id/rewardsPriceTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/default_margin_base"
                         android:text="@string/sample_priece"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:textColor="@color/colorTextWhite"
                         android:textIsSelectable="true"
                         android:textSize="@dimen/title_cards_content_size" />  -->
    <!--
                    </LinearLayout>
                </FrameLayout>


                        <FrameLayout
                            android:id="@+id/textlayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/mainlayout"
                            android:layout_margin="@dimen/text_margin">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <WebView
                                    android:id="@+id/rewardsDescriptionTextView"
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent">


                                </WebView>
                            </LinearLayout>
                        </FrameLayout>




            <TextView
                android:id="@+id/rewardsDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/sample_description"
                android:textAlignment="inherit"
                android:textSize="@dimen/text_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainlayout" />



       </android.support.constraint.ConstraintLayout>-->

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textColor="@color/colorTextWhite"
            android:backgroundTint="@color/colorPrimary"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>